[package]
name = "mepul"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6.1", features = ["derive"] }
reqwest = { version = "=0.11.27", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tar = "0.4"
tokio = { version = "=1.36.0", features = ["fs", "macros", "rt-multi-thread"] }
