[package]
name = "mepul"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tar = "0.4"
clap = { version = "4.6.1", features = ["derive"] }


smol = "2.0.2"
smol-macros = "0.1.1"
macro_rules_attribute = "0.2.2"
futures-util = "0.3"
surf = { version = "2.3.2", features = ["async-native-tls"] }
