[package]
name = "mepul"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
reqwest = { version = "=0.11.27", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tar = "0.4"
tokio = { version = "1.40.1", features = ["fs", "macros", "rt-multi-thread"] }
clap = { version = "4.6.1", features = ["derive"] }

mimalloc = "0.1.51"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-opentelemetry = "0.33.0"
opentelemetry = "0.32.0"
opentelemetry_sdk = { version = "0.32.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32.0", features = ["grpc-tonic"] }